--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -42,7 +43,7 @@
   <section id="galeria">
     <h2>Galeria</h2>
     <div class="gallery">
-      <p>Galeria zdjęć i filmów z eventów. (Tu administrator będzie mógł dodawać nowe materiały)</p>
+      <img src="event-photo.jpg" alt="LumiParty event" />
     </div>
   </section>
 
@@ -50,7 +51,7 @@
     <h2>Opinie klientów</h2>
     <form class="review-form">
       <label for="stars">Twoja ocena:</label><br />
-      <div class="stars">★★★★☆</div>
+      <div class="stars">★★★★★</div>
       <label for="opinia">Opinia:</label><br />
       <textarea id="opinia" rows="4" placeholder="Napisz swoją opinię..."></textarea><br />
       <button type="submit">Wyślij opinię</button>
